--- a/style (3).css
+++ b/style (3).css
@@ -1,11 +1,11 @@
 body {
-
+    margin: 0;
+    padding-top: 800px;
     text-align: center;
 }
 
-#profile {
-    width: 100px;
-    height: 100px;
+.profile {
+    border-radius: 50%;
 
 }
 
@@ -14,13 +14,13 @@ body {
     bottom: 0;
     background: linear-gradient(#60ebeb 0%, #27ae60 100%);
     display:table;
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
 }
 
 h1 {
 
-    font-size: 60px;
+    font-size: 40px;
     font-family: sans-serif;
     font-weight: 300;
 
@@ -99,11 +99,3 @@ a {
 {
     display: inline;
 }
-
-p
-{
-    font-size: 30px;
-    font-style: italic;
-    color: green;
-}
-
